--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
+    "@stripe/stripe-js": "^1.37.0",
+    "canvas-confetti": "^1.5.1",
     "next": "12.3.1",
+    "next-sanity-image": "^4.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0",
+    "stripe": "^10.11.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1"
   }
