--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.37.0",
     "canvas-confetti": "^1.5.1",
+    "eslint-config-next": "^12.3.1",
     "next": "12.3.1",
     "next-sanity-image": "^4.1.0",
     "react": "18.2.0",
@@ -23,7 +24,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint": "8.23.1"
   }
 }
